--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   {% assign canonical = page.url | replace:'index.html','' | absolute_url %}
   {% assign description = page.description | default: page.excerpt | default: site.description | strip_html | normalize_whitespace | escape %}
   <title>{{ title }}</title>
-  <meta name="description" content="{{ description }}">
+  <meta name="description" content="{{ description | truncate: 200 }}">
   {% if page.keywords %}
     {% if page.keywords.first %}
       {% assign keywords = page.keywords | join: ',' %}
@@ -32,7 +32,7 @@
   <meta property="og:title" content="{{ title }}">
   <meta property="og:site_name" content="{{ site.title | escape }}">
   <meta property="og:url" content="{{ canonical }}">
-  <meta property="og:description" content="{{ description }}">
+  <meta property="og:description" content="{{ description | truncate: 200 }}">
   {% if site.facebook_page %}<meta property="article:author" content="{{ site.facebook_page }}">{% endif %}
   {% if page.facebook.image %}
     <meta property="og:image" content="{{ page.facebook.image }}">
