--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="{{ keywords }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ site.css | relative_url }}">
   <link rel="canonical" href="{{ canonical }}">
   {% assign feed_path = "/feed.xml" %}
   {% if site.feed and site.feed.path %}
