--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -90,3 +90,24 @@ layout: default
 <noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
 </div>
 <!-- City版安装代码已完成 -->
+
+<!-- 解决_post文件夹相对路径图片无法加载问题 -->
+<script type="text/javascript">
+  window.οnlοad = function () {
+    const prefix = '{{site.post_imgs_prefix}}'
+    const imgs = document.querySelectorAll(".post-content img")
+    for (let i = 0; i < imgs.length; i++) {
+      const img = imgs[i]
+      const href = window.location.href
+      if (img.src && img.src.startsWith(href)) {
+        // 图片相对路径
+        const src = img.src.substring(href.length)
+        // md文档所在文件夹（_post/???）
+        const number = Number(src.substring(0, 4))
+        if (!isNaN(number)) {
+          img.src = prefix + '/' + number + '/' + src
+        }
+      }
+    }
+  }
+</script>
