--- a/assets/main.css
+++ b/assets/main.css
@@ -321,7 +321,7 @@ pre > code {
 
 @media screen and (max-width: 800px) {
     .post-title {
-        font-size: 36px;
+        /*font-size: 23px;*/
     }
 }
 
