--- a/_includes/search.html
+++ b/_includes/search.html
@@ -9,6 +9,7 @@
     width: 98%;
     border-left: none;
     border-right: none;
+    border-bottom: none;
     float: left;
     font-size: 16px;
     font-weight: 300;
@@ -25,8 +26,8 @@
     color: #fff;
     cursor: pointer;
     float: right;
-    width: 50px;
-    margin-right: -50px;
+    width: 45px;
+    margin-right: -45px;
     outline: 0;
 ">
     <ul id="results-container" style=""></ul>
