--- a/_includes/custom/search.html
+++ b/_includes/custom/search.html
@@ -1,36 +1,22 @@
 <!-- HTML elements for search -->
-<div style="z-index: 9;width: 40%;background-color: inherit;margin: 0px auto;position: absolute;border: 1px solid rgb(238, 242, 248);top: 56px;left: 30%;display: none;" id="search">
+<div style="z-index: 9; width: 54%; background-color: rgb(250, 250, 250); margin: 0px auto; position: absolute; border: 1px solid rgb(238, 242, 248); top: 56px; left: 23%; display: none;" id="search">
     <input type="text" id="search-input" placeholder="Search blog posts.." style="
     color: #314659;
     border: solid 1px #eef2f8;
     height: 32px;
     font-family: cursive,sans-serif !important;
-    padding-left: 7px;
-    width: 98%;
+    padding-left: 1%;
+    width: 99%;
     border-left: none;
-    border-right: none;
-    border-bottom: none;
     float: left;
     font-size: 16px;
     font-weight: 300;
     border-radius: 2px 0 0 2px;
     outline: 0;
     background-color: #fff;
-"><input onclick="document.getElementById('search').style.display = 'none'" type="button" value="关闭" style="
-    height: 35px;
-    font-size: 14px;
-    font-family: cursive,sans-serif !important;
-    font-weight: 300;
-    background-color: #2196F3;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    float: right;
-    width: 45px;
-    margin-right: -45px;
-    outline: 0;
 ">
-    <ul id="results-container" style=""></ul>
+    <ul id="results-container" style="
+"></ul>
 </div>
 <!-- or without installing anything -->
 <script src="https://unpkg.com/simple-jekyll-search/dest/simple-jekyll-search.min.js"></script>
@@ -44,6 +30,7 @@
             })
         }
     }
+    document.getElementsByTagName('main')[0].addEventListener('click',()=>{document.getElementById('search').style.display = 'none'})
     var sjs = SimpleJekyllSearch({
                                      searchInput: document.getElementById('search-input'),
                                      resultsContainer: document.getElementById('results-container'),
