代码优化，plugin位于body底部，post插件位于post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,12 +33,4 @@ layout: default
 
 </article>
 
-{% include custom/wechat_subscriber.html %}
-
-{% include custom/admire.html %}
-
-{% include custom/pagination.html %}
-
-{% include custom/comment_lv.html %}
-
-{% include custom/post_img_load.html %}
+{% include post.html %}
