--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,7 @@
 
     {% include footer.html %}
 
-    {% include custom/search.html %}
-
-    {% include custom/baidu_spider.html %}
+    {% include plugin.html %}
 
   </body>
 
