增加展开阅读全文功能

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,13 +1,15 @@
 <section>
 
-{% include post/wechat_subscriber.html %}
+    {% include post/post_img_load.html %}
 
-{% include post/admire.html %}
+    {% include post/wechat_subscriber.html %}
 
-{% include post/pagination.html %}
+    {% include post/admire.html %}
 
-{% include post/comment_lv.html %}
+    {% include post/pagination.html %}
 
-{% include post/post_img_load.html %}
+    {% include post/comment_lv.html %}
+
+    {% include post/readMore.html %}
 
 </section>
