--- a/_includes/post/copyright.html
+++ b/_includes/post/copyright.html
@@ -5,6 +5,7 @@
         $('.post-content').after(`
 <div>    <p style="
     margin: 10px 0;
+    margin-top: 30px;
     color: #606060;
     background-color: #f8f8f8;
     padding: 5px;
