--- a/assets/main.css
+++ b/assets/main.css
@@ -345,8 +345,9 @@ pre > code {
 }
 
 @media screen and (max-width: 800px) {
-    .post-title {
-        /*font-size: 23px;*/
+    #search {
+        width: 100% !important;
+        left: 0 !important;
     }
 }
 
