--- a/assets/main.css
+++ b/assets/main.css
@@ -339,15 +339,15 @@ pre > code {
 }
 
 .post-title {
-    font-size: 23px;
+    font-size: 20px;
     letter-spacing: -1px;
     line-height: 1;
 }
 
 @media screen and (max-width: 800px) {
     #search {
-        width: 100% !important;
-        left: 0 !important;
+        width: 98% !important;
+        left: 1% !important;
     }
 }
 
