--- a/_includes/plugin/search.html
+++ b/_includes/plugin/search.html
@@ -1,15 +1,12 @@
-<!-- HTML elements for search -->
-<div style="z-index: 9; width: 54%; background-color: rgb(250, 250, 250); margin: 0 auto;
-    position: absolute; border: 1px solid rgb(238, 242, 248);
-    border-top: none; border-bottom: none;top: 56px; left: 23%; display: none;" id="search">
+<!-- 文章检索 -->
+<div style="z-index: 9; width: 54%; background-color: rgb(250, 250, 250); margin: 0 auto; position: absolute; border: 1px solid rgb(232, 232, 232); top: 56px; left: 23%; display: none;" id="search">
     <input type="text" id="search-input" placeholder="Search blog posts.." style="
     color: #314659;
-    border: solid 1px #eef2f8;
     height: 32px;
     font-family: cursive,sans-serif !important;
-    padding-left: 1%;
-    width: 99%;
-    border-left: none;
+    width: 100%;
+    border: none;
+    padding: 0;
     float: left;
     font-size: 16px;
     font-weight: 300;
@@ -17,25 +14,41 @@
     outline: 0;
     background-color: #fff;
 ">
-    <ul id="results-container" style="
-"></ul>
+    <ul id="results-container"></ul>
 </div>
-<!-- or without installing anything -->
-<script src="https://unpkg.com/simple-jekyll-search/dest/simple-jekyll-search.min.js"></script>
-<script type="application/javascript">
+<style type="text/css">
+    .touMing{
+        filter: alpha(opacity=20);
+        -moz-opacity: 0.2;
+        opacity: 0.2;
+        background-color: #fff;
+    }
+    @media screen and (max-width: 800px) {
+        #search {
+            width: 98% !important;
+            left: 1% !important;
+        }
+    }
+</style>
+<script src="//unpkg.com/simple-jekyll-search/dest/simple-jekyll-search.min.js"></script>
+<script type="text/javascript">
     let s = document.querySelectorAll('a.page-link')
     for (let i = 0; i < s.length; i++) {
         const a = s[i]
         if (a.innerText === '搜索') {
+            // 打开
             a.addEventListener('click', function () {
                 document.getElementById('search').style.display = 'block'
+                document.getElementsByTagName('main')[0].classList.add("touMing")
             })
         }
     }
+    // 关闭
     document.getElementsByTagName('main')[0].addEventListener('click', () => {
         document.getElementById('search').style.display = 'none'
+        document.getElementsByTagName('main')[0].classList.remove("touMing")
     })
-    var sjs = SimpleJekyllSearch({
+    let sjs = SimpleJekyllSearch({
                                      searchInput: document.getElementById('search-input'),
                                      resultsContainer: document.getElementById('results-container'),
                                      json: '/search.json',
