--- a/_includes/default/search.html
+++ b/_includes/default/search.html
@@ -1,5 +1,13 @@
 <!-- 文章检索 -->
-<div style="z-index: 9; width: 54%; background-color: rgb(250, 250, 250); margin: 0 auto; position: absolute; border: 1px solid rgb(232, 232, 232); top: 56px; left: 23%; display: none;" id="search">
+<div id="search" style="
+    z-index: 9; width: 54%;
+    background-color: rgb(250, 250, 250);
+    margin: 0 auto;
+    position: absolute;
+    border: 1px solid #2196F3;
+    top: 56px; left: 23%;
+    display: none;
+">
     <input type="text" id="search-input" placeholder="Search blog posts.." style="
     color: #314659;
     height: 32px;
@@ -17,12 +25,13 @@
     <ul id="results-container"></ul>
 </div>
 <style type="text/css">
-    .touMing{
+    .touMing {
         filter: alpha(opacity=10);
         -moz-opacity: 0.1;
         opacity: 0.1;
         background-color: #fff;
     }
+
     @media screen and (max-width: 800px) {
         #search {
             width: 98% !important;
