--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -10,7 +10,8 @@
         document.querySelector(node).style.overflowY = 'hidden'
         $(node).readmore({
                                      moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
-                                     lessLink: '<a style="visibility: hidden" href="#">收起</a>'
+                                     lessLink: '<a style="visibility: hidden" href="#">收起</a>',
+                                     collapsedHeight: document.getElementsByClassName('post-content')[0].offsetHeight*0.7
                                  })
         $('#readMore1').after(`<div style="width: 100%;text-align: center">
         <a id="readMore2" style="font-size: 16px;color: #03A9F4;" onclick="readMoreOpen('${key}','${img}')" href="#">展开阅读全文</a>
