--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -3,22 +3,23 @@
 <script src="//cdn.bootcss.com/Readmore.js/2.2.1/readmore.min.js"></script>
 <script type="text/javascript">
     let loginSiteKey = 'loginSite'
+
     function readMoreOne(node, key, img) {
         if (getCookie(loginSiteKey) && getCookie(loginSiteKey) !== "") {
             return
         }
         document.querySelector(node).style.overflowY = 'hidden'
         $(node).readmore({
-                                     moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
-                                     lessLink: '<a style="visibility: hidden" href="#">收起</a>',
-                                     collapsedHeight: document.getElementsByClassName('post-content')[0].offsetHeight*0.7
-                                 })
+                             collapsedHeight: document.getElementsByClassName('post-content')[0].clientHeight * 0.7,
+                             moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
+                             lessLink: '<a style="visibility: hidden" href="#">收起</a>'
+                         })
         $('#readMore1').after(`<div style="width: 100%;text-align: center">
         <a id="readMore2" style="font-size: 16px;color: #03A9F4;" onclick="readMoreOpen('${key}','${img}')" href="#">展开阅读全文</a>
     </div>`)
     }
 
-    function readMoreOpen(key,img) {
+    function readMoreOpen(key, img) {
         $('body').append(`
 <div id="gzh" style="position: fixed;background: whitesmoke;align-content: center;text-align: center;width: 80%;height: 45%;padding: 5% 0;z-index: 9;left: 10%;bottom: 20%;">
     <p style="margin: 0;font-size: 16px;">扫码关注微信公众号回复<span style="color: red;">${key}</span>获取验证码</p>
