--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -10,7 +10,7 @@
         }
         document.querySelector(node).style.overflowY = 'hidden'
         $(node).readmore({
-                             collapsedHeight: document.getElementsByClassName('post-content')[0].clientHeight * 0.7,
+                             collapsedHeight: parseInt(document.getElementsByClassName('post-content')[0].clientHeight * 0.7),
                              moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
                              lessLink: '<a style="visibility: hidden" href="#">收起</a>'
                          })
