--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -9,7 +9,7 @@
             return
         }
         document.querySelector(node).style.overflowY = 'hidden'
-        const h = parseInt(document.getElementsByClassName('post-content')[0].clientHeight * 0.7)
+        const h = parseInt(parseInt(document.getElementsByClassName('post-content')[0].clientHeight) * 0.7)
         $(node).readmore({
                              collapsedHeight: h,
                              moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
