--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -2,16 +2,16 @@
 <script src="//cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/Readmore.js/2.2.1/readmore.min.js"></script>
 <script type="text/javascript">
-    let loginSiteKey = 'loginSite'
+    const loginSiteKey = 'loginSite'
+    const height = parseInt(parseInt(document.getElementsByClassName('post-content')[0].clientHeight) * 0.5)
 
     function readMoreOne(node, key, img) {
         if (getCookie(loginSiteKey) && getCookie(loginSiteKey) !== "") {
             return
         }
         document.querySelector(node).style.overflowY = 'hidden'
-        const h = parseInt(parseInt(document.getElementsByClassName('post-content')[0].clientHeight) * 0.7)
         $(node).readmore({
-                             collapsedHeight: h,
+                             collapsedHeight: height,
                              moreLink: '<a id="readMore1" style="visibility: hidden"  href="#">展开阅读全文</a>',
                              lessLink: '<a style="visibility: hidden" href="#">收起</a>'
                          })
