--- a/_includes/default/search.html
+++ b/_includes/default/search.html
@@ -1,10 +1,11 @@
 <!-- 文章检索 -->
+<div>
 <div id="search" style="
     z-index: 9; width: 54%;
     background-color: rgb(250, 250, 250);
     margin: 0 auto;
     position: absolute;
-    border: 1px solid #2196F3;
+    border: 2px solid #2196F3;
     top: 56px; left: 23%;
     display: none;
 ">
@@ -64,3 +65,4 @@
                                      limit: 99
                                  })
 </script>
+</div>
