--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -1,5 +1,5 @@
 <!--阅读全文-->
-<script src="//cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<div>
 <script src="//cdn.bootcss.com/Readmore.js/2.2.1/readmore.min.js"></script>
 <script type="text/javascript">
     const loginSiteKey = 'loginSite'
@@ -79,3 +79,4 @@
                     '{{site.wechat_subscriber.qcode}}')
     });
 </script>
+</div>
