--- a/_includes/post/toc.html
+++ b/_includes/post/toc.html
@@ -1,1 +1,138 @@
 <!--文章目录-->
+<div>
+    <style type="text/css">
+        #TOC {
+            font-size: 15px;
+            margin-bottom: 10px;
+        }
+        #TOC a{
+            color: #2196F3;
+        }
+        .TOCLevel1 {
+            margin-left:10px;
+        }
+
+        .TOCLevel2 {
+            margin-left:20px;
+        }
+
+        .TOCLevel3 {
+            margin-left:30px;
+        }
+
+        .TOCLevel4 {
+            margin-left:40px;
+        }
+
+        .TOCLevel5 {
+            margin-left:50px;
+        }
+        .TOCLevel6 {
+            margin-left:60px;
+        }
+    </style>
+    <script>
+        function toc() {
+            // Find the TOC container element.
+            // If there isn't one, create one at the start of the document.
+            let toc = document.getElementById("TOC");
+            let content = document.getElementsByClassName('post-content')[0]
+            if (!toc) {
+                toc = document.createElement("div");
+                toc.id = "TOC";
+                // document.body.insertBefore(toc, document.body.firstChild);
+                document.getElementsByClassName('post')[0].insertBefore(toc, content)
+            }
+            // Find all section heading elements
+            let headings;
+            if (document.querySelectorAll) // Can we do it the easy way?
+            {
+                headings = content.querySelectorAll("h1,h2,h3,h4,h5,h6");
+            } else   // Otherwise, find the headings the hard way
+            {
+                headings = findHeadings(content, []);
+            }
+
+            // Recursively traverse the document body looking for headings
+            function findHeadings(root, sects) {
+                for (let c = root.firstChild; c != null; c = c.nextSibling) {
+                    if (c.nodeType !== 1) {
+                        continue;
+                    }
+                    if (c.tagName.length === 2 && c.tagName.charAt(0) === "H") {
+                        sects.push(c);
+                    } else {
+                        findHeadings(c, sects);
+                    }
+                }
+                return sects;
+            }
+
+            // Initialize an array that keeps track of section numbers.
+            let sectionNumbers = [0, 0, 0, 0, 0, 0];
+            // Now loop through the section header elements we found.
+            for (let h = 0; h < headings.length; h++) {
+                let heading = headings[h];
+                // Skip the section heading if it is inside the TOC container.
+                if (heading.parentNode === toc) {
+                    continue;
+                }
+                // Figure out what level heading it is.
+                let level = parseInt(heading.tagName.charAt(1));
+                if (isNaN(level) || level < 1 || level > 6) {
+                    continue;
+                }
+                // Increment the section number for this heading level
+                // and reset all lower heading level numbers to zero.
+                sectionNumbers[level - 1]++;
+                for (let i = level; i < 6; i++) {
+                    sectionNumbers[i] = 0;
+                }
+                // Now combine section numbers for all heading levels
+                // to produce a section number like 2.3.1.
+                let sectionNumber = sectionNumbers.slice(0, level).join(".")
+                // Add the section number to the section header title.
+                // We place the number in a <span> to make it styleable.
+                let span = document.createElement("span");
+                span.className = "TOCSectNum";
+                span.innerHTML = sectionNumber;
+                // console.log(94 + " " + sectionNumber)
+                // heading.insertBefore(span, heading.firstChild);
+                // Wrap the heading in a named anchor so we can link to it.
+                let anchor = document.createElement("div");
+                anchor.id = "TOC" + sectionNumber;
+                heading.parentNode.insertBefore(anchor, heading);
+                anchor.appendChild(heading);
+                // Now create a link to this section.
+                let link = document.createElement("a");
+                link.href = "#TOC" + sectionNumber; // Link destination
+                link.innerHTML = heading.innerHTML; // Link text is same as heading
+                // console.log(105 + " " + heading.innerHTML)
+                // Place the link in a div that is styleable based on the level.
+                let entry = document.createElement("div");
+                entry.className = "TOCEntry TOCLevel" + level;
+                entry.appendChild(link);
+                // And add the div to the TOC container.
+                toc.appendChild(entry);
+            }
+            let title = document.createElement("span");
+            title.innerHTML = '目录'
+            toc.insertBefore(title, toc.firstChild)
+        }
+        function getCookie(cname) {
+            var name = cname + "=";
+            var ca = document.cookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i].trim();
+                if (c.indexOf(name) === 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+        // 如果还没有解锁，这部分是阅读更多的代码
+        if (getCookie(loginSiteKey) && getCookie(loginSiteKey) !== "") {
+            toc()
+        }
+    </script>
+</div>
