--- a/_includes/category_links.html
+++ b/_includes/category_links.html
@@ -13,6 +13,7 @@
   {% for tag in include.tags %}
     {% assign no_comma = forloop.last %}
     {% for archive in site.archives %}
+type:{{ archive.type }} title:{{ archive.title }} tag:{{ tag }}
       {% if archive.type == "tag" and archive.title == tag %}
         <a href="{{ archive.url | relative_url }}">{{ archive.title | escape }}</a>{% unless no_comma %},{% endunless %}
       {% endif %}
