--- a/_includes/category_links.html
+++ b/_includes/category_links.html
@@ -1,21 +1,13 @@
 {% if include.categories != empty %} •
   {% for category in include.categories %}
     {% assign no_comma = forloop.last %}
-    {% for archive in site.archives %}
-      {% if archive.type == "category" and archive.title == category %}
-        <a href="{{ archive.url | relative_url }}">{{ archive.title | escape }}</a>{% unless no_comma %},{% endunless %}
-      {% endif %}
-    {% endfor %}
+        <a href="/category?{{ category }}">{{ category | escape }}</a>{% unless no_comma %},{% endunless %}
   {% endfor %}
 {% endif %}
 
 {% if include.tags != empty %} •
   {% for tag in include.tags %}
     {% assign no_comma = forloop.last %}
-    {% for archive in site.archives %}
-      {% if archive.type == "tag" and archive.title == tag %}
-        <a href="{{ archive.url | relative_url }}">{{ archive.title | escape }}</a>{% unless no_comma %},{% endunless %}
-      {% endif %}
-    {% endfor %}
+        <a href="/tags?{{ tag }}">{{ tag | escape }}</a>{% unless no_comma %},{% endunless %}
   {% endfor %}
 {% endif %}
