--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -75,7 +75,7 @@
     }
 
     $(document).ready(function () {
-        readMoreOne('.post', '博客解锁', '{{site.wechat_subscriber.qcode}}')
+        readMoreOne('.post', '{{site.wechat_subscriber.token}}', '{{site.wechat_subscriber.qcode}}')
     });
 </script>
 </div>
