--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,48 @@ layout: default
   {% capture site_lang %}{{ site.lang | default: "en" }}{% endcapture %}
 
   <ul class="post-list">
+
+<!--  置顶文章列表  -->
+    {% for post in site.posts %}
+      {% if paginator.page == 1 and post.top == true %}
+      {% capture post_lang %}{{ post.lang | default: site_lang }}{% endcapture %}
+      {% capture lang %}{% if post_lang != site_lang %}{{ post_lang }}{% endif %}{% endcapture %}
+
+      <li{% if lang != empty %} lang="{{ lang }}"{% endif %}>
+        <header class="post-header">
+          <h1 class="post-title">[置顶]
+            {% if post.external-url %}
+              <a class="post-link" href="{{ post.external-url }}">{{ post.title | escape }} &rarr;</a>
+            {% else %}
+              <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            {% endif %}
+          </h1>
+
+          <p class="post-meta">
+            {{ post.date | date: "%Y-%m-%d %H:%M:%S" }}
+            {% if post.categories != empty or post.tags != empty %}
+              {% include category_links.html categories=post.categories tags=post.tags %}
+            {% endif %}
+            {% if post.external-url %}
+              • <a href="{{ post.url | relative_url }}">Permalink</a>
+            {% endif %}
+          </p>
+        </header>
+
+        <!-- <div class="post-content"> -->
+          <!-- {-{ post.excerpt }-} -->
+        <!-- </div> -->
+        {% if post.content contains site.excerpt_separator %}
+          <p class="post-continue">
+            <a href="{{ post.url | relative_url }}">Read on &rarr;</a>
+          </p>
+        {% endif %}
+      </li>
+    {% endif %}
+    {% endfor %}
+<!-- 普通文章列表 -->
     {% for post in paginator.posts %}
+      {% if post.top != true %}
       {% capture post_lang %}{{ post.lang | default: site_lang }}{% endcapture %}
       {% capture lang %}{% if post_lang != site_lang %}{{ post_lang }}{% endif %}{% endcapture %}
 
@@ -43,6 +84,7 @@ layout: default
           </p>
         {% endif %}
       </li>
+    {% endif %}
     {% endfor %}
   </ul>
 
