--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,8 +2,6 @@
 
     {% include default/search.html %}
 
-    {% include default/baidu_statistics.html %}
-
-    {% include default/baidu_spider.html %}
+    {% include default/youmeng.html %}
 
 </section>
