--- a/assets/main.css
+++ b/assets/main.css
@@ -760,3 +760,8 @@ pre > code {
     -webkit-animation: roll 0.1s infinite linear;
     -moz-animation: roll 0.1s infinite linear
 }
+
+
+h1.top {
+    text-decoration: underline;
+}
