--- a/_includes/default/youmeng.html
+++ b/_includes/default/youmeng.html
@@ -1,3 +1,2 @@
 <!--站长统计-->
-<script type="text/javascript">document.write(unescape(
-    "%3Cspan id='cnzz_stat_icon_1278606371'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278606371%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>
+<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278606371&web_id=1278606371"></script>
