--- a/_includes/default/youmeng.html
+++ b/_includes/default/youmeng.html
@@ -1,2 +1,4 @@
 <!--站长统计-->
-<script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278606371&web_id=1278606371"></script>
+<div style="visibility: hidden">
+    <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278606371&web_id=1278606371"></script>
+</div>
