--- a/_includes/default/youmeng.html
+++ b/_includes/default/youmeng.html
@@ -1,4 +1,4 @@
 <!--站长统计-->
-<div style="visibility: hidden">
+<div style="display: none">
     <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278606371&web_id=1278606371"></script>
 </div>
