--- a/_includes/post/copyright.html
+++ b/_includes/post/copyright.html
@@ -1,8 +1,6 @@
 <!--版权声明-->
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('.post-content').append(`
-<div>    <p style="
+<div>
+    <p style="
     margin: 10px 0;
     margin-top: 50px;
     color: #606060;
@@ -11,8 +9,6 @@
     padding: 5px;
     border-left: 2px solid #2196F3;
     border-radius: 2px;
-"><b>版权声明：</b>凡未经本网站(<a href="http://ystblog.com" style="color: inherit">ystblog.com</a>)书面授权，任何媒体、网站及个人不得转载、复制、重制、改动、展示或使用本网站的局部或全部的内容或服务，或在非本网站所属服务器上建立镜像。如果已转载，请自行删除。同时，我们保留进一步追究相关行为主体的法律责任的权利。我们希望与各媒体合作，签订著作权有偿使用许可合同，故转载方须书面/邮件申请，以待商榷。</p>
+"><b>版权声明：</b>凡未经本网站(<a href="http://ystblog.com" style="color: inherit">ystblog.com</a>)书面授权，任何媒体、网站及个人不得转载、复制、重制、改动、展示或使用本网站的局部或全部的内容或服务，或在非本网站所属服务器上建立镜像。如果已转载，请自行删除。同时，我们保留进一步追究相关行为主体的法律责任的权利。我们希望与各媒体合作，签订著作权有偿使用许可合同，故转载方须书面/邮件申请，以待商榷。
+    </p>
 </div>
-`)
-    })
-</script>
