--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,7 +10,7 @@
 
     {% include post/pagination.html %}
 
-    {% include post/comment_cy.html %}
+    {% include post/comment_lv.html %}
 
     {% include post/readMore.html %}
 
