--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -11,6 +11,7 @@ layout: default
 
   <ul class="post-archives">
     {% for post in site.posts %}
+      {% if post.score != 'private' %}
       {% capture post_lang %}{{ post.lang | default: site_lang }}{% endcapture %}
       {% capture lang %}{% if post_lang != site_lang %}{{ post_lang }}{% endif %}{% endcapture %}
 
@@ -33,6 +34,7 @@ layout: default
           {% endif %}
         </h2>
       </li>
+      {% endif %}
     {% endfor %}
   </ul>
 
