--- a/_includes/post/readMore.html
+++ b/_includes/post/readMore.html
@@ -75,7 +75,7 @@
     }
 
     $(document).ready(function () {
-        if ({{site.wechat_subscriber.enable}}){
+        if ({{site.wechat_subscriber.enabled}}){
             readMoreOne('.post', '{{site.wechat_subscriber.token}}', '{{site.wechat_subscriber.qcode}}')
         }
     });
