--- a/_includes/default/search.html
+++ b/_includes/default/search.html
@@ -6,7 +6,7 @@
     margin: 0 auto;
     position: absolute;
     border: 2px solid #2196F3;
-    top: 56px; left: 23%;
+    top: 56px; left: 23%; border-radius: 3px;
     display: none;
 ">
     <input type="text" id="search-input" placeholder="Search blog posts.." style="
