--- a/_includes/default/search.html
+++ b/_includes/default/search.html
@@ -1,13 +1,16 @@
 <!-- 文章检索 -->
 <div>
 <div id="search" style="
-    z-index: 9; width: 54%;
+    z-index: 9; width: 50%;
     background-color: rgb(250, 250, 250);
     margin: 0 auto;
     position: absolute;
     border: 2px solid #2196F3;
-    top: 56px; left: 23%; border-radius: 3px;
+    top: 56px; left: 23%;
     display: none;
+    border-radius: 10px;
+    padding-right: 7px;
+    padding-left: 7px;
 ">
     <input type="text" id="search-input" placeholder="Search blog posts.." style="
     color: #314659;
@@ -35,8 +38,8 @@
 
     @media screen and (max-width: 800px) {
         #search {
-            width: 98% !important;
-            left: 1% !important;
+            width: 90% !important;
+            left: 3% !important;
         }
     }
 </style>
