--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,9 @@
   {% assign title = page.title | default: site.title | escape %}
   {% assign canonical = page.url | replace:'index.html','' | absolute_url %}
   {% assign description = page.description | default: page.excerpt | default: site.description | strip_html | normalize_whitespace | escape %}
-  <title>{{ title }}</title>
+
+  <title>{{ title }}{% if title != site.title %} - {{ site.title }}{% endif %}</title>
+
   <meta name="description" content="{{ description | truncate: 200 }}">
   {% if page.keywords %}
     {% if page.keywords.first %}
