--- a/_includes/footer_content.html
+++ b/_includes/footer_content.html
@@ -2,4 +2,6 @@
 {% if site.feed and site.feed.path %}
   {% assign feed_path = site.feed.path %}
 {% endif %}
-{{ site.filing }} &copy; {{ site.author }} - Powered by <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="{{ feed_path }}">RSS</a>
+<div class="font_link">
+  <a href="https://beian.miit.gov.cn">{{ site.filing }}</a> &copy; {{ site.author }} - Powered by <a href="https://jekyllrb.com" style="color:#7e7e7e">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="{{ feed_path }}">RSS</a>
+</div>
